# FndMgr

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: sample_funds.csv
src/: db.sqlite3  manage.py
src/fund/: admin.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/fund/migrations/: 0001_initial.py
src/fund/templates/fund/: index.html  upload_csv.html
src/fund_mgr/: asgi.py  settings.py  urls.py  wsgi.py
